# fin-report-reader-v2

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: mocked-annual-report-journey.yml
backend/: __init__.py  alembic.ini
backend/app/: admission.py  analysis_run_lifecycle.py  annual_report_library.py  annual_report_upload_intake.py  asgi.py  current_analysis_result_access.py  errors.py  evidence_package.py  evidence_package_projection.py  library_lifecycle.py  main.py  management_discussion_analysis_execution.py  mda_analysis.py  models.py  openai_like_figure_visual_analyzer.py  pdf_extraction.py  persistence.py  presenters.py  qa.py  report_downloads.py  schemas.py
backend/migrations/: env.py
backend/tests/: test_analysis_run_lifecycle.py  test_annual_report_library_api.py  test_evidence_package.py  test_library_deletion_api.py  test_mda_analysis_api.py  test_mocked_ci_workflow_journey.py  test_openai_like_figure_visual_analyzer.py  test_upload_admission_api.py
docs/adr/: 0001-annual-report-file-version-mda-analysis.md  0002-minimal-technology-baseline.md
docs/evaluation/: README.md  ground_truth_annotation.schema.json
docs/issues/: 2026-05-06-fileversion-mda-implementation-issues.md
docs/prd/: 2026-05-06-fileversion-mda-analysis-prd.md
docs/testing/: mocked-ci-workflow.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  analysisResultDetailInteraction.ts  frontendFileVersionWorkflow.ts  styles.css  uploadPresentation.ts
frontend/tests/: analysisResultDetailInteraction.test.cjs  (+2 more)
(+10 files in other folders)
