[project]
name = "fin-report-reader-v2"
version = "0.1.0"
description = "Annual report upload admission and MDA analysis assistant"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.111,<1.0",
  "pydantic>=2.8,<3.0",
  "pymupdf>=1.24,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["backend*"]
